[package]
name = "usbh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
embed-doc-image = "0.1.4"
fugit = "0.3.7"
nom = { version = "7.1.3", default-features = false }
usb-device = { version = "0.2.9", features = ["defmt"] }
